--- a/lib/intro_beam_web/templates/layout/root.html.heex
+++ b/lib/intro_beam_web/templates/layout/root.html.heex
@@ -14,9 +14,11 @@
       <section class="container">
         <nav>
           <ul>
-            <li><a href="https://hexdocs.pm/phoenix/overview.html">Get Started</a></li>
+            <li><a href="http://localhost:4000/monitor"  target="_blank">System-Monitor</a></li>
+            <li><a href="http://localhost:4000/user"  target="_blank">User-Seite</a></li>
+    
             <%= if function_exported?(Routes, :live_dashboard_path, 2) do %>
-              <li><%= link "LiveDashboard", to: Routes.live_dashboard_path(@conn, :home) %></li>
+              <li><%= link "LiveDashboard", to: Routes.live_dashboard_path(@conn, :home), target: "_blank" %></li>
             <% end %>
           </ul>
         </nav>
